--- a/src/style.less
+++ b/src/style.less
@@ -188,6 +188,9 @@ footer {
   body {
     background-image: url("../images/bg-intro-desktop.png");
   }
+  h1 {
+    line-height: 1.2;
+  }
   main {
     height: 100%;
   }
